vbnc/vbnc/tests/Errors/32008-2.vb
Class Delegate1
	Sub S
		Dim o as System.CrossAppDomainDelegate
		o = New System.CrossAppDomainDelegate (1, 2)
	End Sub
End Class

